# DIP-Practice

./: .gitignore  README.md
cpp/: .clang-format  CMakeLists.txt
cpp/gapi_test/: CMakeLists.txt  main.cpp
cpp/interpolation/: CMakeLists.txt  interp.cpp  interp.hpp  main.cpp  nedi.cpp  nedi.hpp
cpp/optimization/: CMakeLists.txt  main.cpp
cpp/orga_no_care/: CMakeLists.txt  main.cpp
cpp/side_window_filtering/: CMakeLists.txt  main.cpp  side_window_filter.cpp  side_window_filter.hpp
cpp/utils/: CMakeLists.txt  heif_reader.cpp  heif_reader.hpp
python/: 3d_conv.py  bilateral_filter.py  broadcast.py  color_histogram.py  connected_components.py  contour_cross_detection.py  contour_shapes.py  dct_1d.py  dct_blur.py  dct_quant_demo.py  distance_transform.py  edge_aware_filters.py  face_detection.py  face_detection_dnn.py  fit_line.py  flood_fill.py  fnlmd.py  fourier_basis.py  grabcut.py  gradient.py  gradient_distribution.py  harris_corners.py  hist_back_project.py  hough_lines.py  indexing.py  inpaint.py  inpaint_cgs.py  inpaint_omp.py  inpaint_tv_prior.py  integral.py  interpolation.py  iqa.py  mandelbrot.py  meanshift.py  morph.py  motion_saliency.py  optimal_basis.py  pixel_stylize.py  poisson_blend.py  polar_transform.py  (+18 more)
python/dnn/: yolov4.py  yolov5.py
python/features/: akaze.py  blob_detection.py  brisk.py  fast.py  harris_corners.py  orb.py  shi_tomasi_corners.py  sift.py  visualizer.py
python/filtering/: adaptive_filter.py  bilateral_filter.py  dct_1d.py  dct_blur.py  dct_quant_demo.py  edge_aware_filter.py  fnlmd.py  fourier_basis.py  gradient.py  (+9 more)
(+23 files in other folders)
